Dark mode: Fix sorting buttons on stats/portinstallations

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -57,17 +57,17 @@ body{
 
 .order_by_1{
     background-color: #38610B;
-    color: white;
+    color: black;
 }
 
 .order_by_2{
     background-color: #A9F5A9;
-    color: white;
+    color: black;
 }
 
 .order_by_3{
     background-color: #E0F8E0;
-    color: white;
+    color: black;
 }
 
 .footer-links{
